# ciralgo-python

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: sdk-python.yml
docs/: publish-runbook.md
examples/: chat_completion.py  embeddings.py  streaming.py
src/ciralgo/: __init__.py  client.py  errors.py
tests/: test_client.py
